// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`init generator should run successfully with default options 1`] = `
Array [
  "src",
  "tsconfig.app.json",
  "tsconfig.json",
  ".eslintrc.json",
  "jest.config.js",
  "tsconfig.spec.json",
]
`;

exports[`init generator should run successfully with default options 2`] = `
Array [
  "app",
  "assets",
  "environments",
  "main.ts",
]
`;

exports[`init generator should run successfully with default options 3`] = `
Array [
  "app.module.ts",
]
`;

exports[`init generator should run successfully with default options 4`] = `
Object {
  "projects": Object {
    "api": Object {
      "name": "test-api",
      "type": "nest",
    },
    "mobile": Object {
      "name": "mobile",
      "type": "ionic-angular",
    },
    "web": Object {
      "name": "web",
      "type": "angular",
    },
  },
}
`;

exports[`init generator: custom options should run successfully with custom options 1`] = `
Array [
  "src",
  "tsconfig.app.json",
  "tsconfig.json",
  ".eslintrc.json",
  "jest.config.js",
  "tsconfig.spec.json",
]
`;

exports[`init generator: custom options should run successfully with custom options 2`] = `
Array [
  "app",
  "assets",
  "environments",
  "main.ts",
]
`;

exports[`init generator: custom options should run successfully with custom options 3`] = `
Array [
  "app.module.ts",
]
`;

exports[`init generator: custom options should run successfully with custom options 4`] = `
Object {
  "projects": Object {
    "api": Object {
      "name": "server",
      "type": "nest",
    },
    "mobile": Object {
      "name": "native",
      "type": "ionic-angular",
    },
    "web": Object {
      "name": "frontend",
      "type": "angular",
    },
  },
}
`;
